--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "moment": "^2.15.1",
-    "node-uuid": "^1.4.7",
-    "request": "^2.78.0",
     "request-promise": "^4.1.1",
     "socket.io": "^1.5.0",
-    "socket.io-client": "^1.5.0",
-    "thrift": "^0.9.3"
+    "socket.io-client": "^1.5.0"
   },
   "devDependencies": {}
 }
